Based on a patch by Jon McCann.

Migrate profile directory to XDG config dir

https://bugzilla.gnome.org/show_bug.cgi?id=522810